kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-ingress
  namespace: cloudcart
  annotations:
    alb.ingress.kubernetes.io/target-type: ip    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123456789012:certificate/your-acm-cert-id
spec:
  ingressClassName: alb
  rules:
    - host: shop.cloudsystemonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcart-frontend-service
                port:
                  number: 80
    - host: api.cloudsystemonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcart-gateway-service
                port:
                  number: 8000
